[package]
name = "dicom-parser-rs"
version = "0.1.0"
authors = ["Chris Hafey <chafey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dicomparser"
path = "./src/lib.rs"


[dependencies]


[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"